# validator-bonds

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  3RHkdjCwWyK2firrwFQGvXCxbUpBky1GTmb9EDK9hUnX.noop.data  3RHkdjCwWyK2firrwFQGvXCxbUpBky1GTmb9EDK9hUnX.noop.devnet.data  4VTQredsAmr1yzRJugLV6Mt6eu6XMeCwdkZ73wwVMWHv.compression.devnet.data  4VTQredsAmr1yzRJugLV6Mt6eu6XMeCwdkZ73wwVMWHv.data  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  Test.toml  bonds.yaml  jest.config.bankrun.js  jest.config.test-validator.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  settlement-config.yaml  tsconfig.build.json  tsconfig.json
.buildkite/: claim-settlements.yml  close-settlements.yml  collect-bonds.yml  fetch-snapshot.yml  init-settlements.yml  prepare-claims.yml  scheduler.yml
.github/workflows/: anchor-test.yml  typescript-lint.yml
api/: Cargo.toml
api/src/: api_docs.rs  context.rs  dto.rs  lib.rs
api/src/data/: data.rs
api/src/handlers/: bonds.rs  mod.rs  protected_events.rs
api/src/repositories/: bond.rs  mod.rs  protected_events.rs
bot/: Cargo.toml
bot/src/commands/: mod.rs
bot/src/commands/collect/: bonds.rs  mod.rs
bot/src/commands/store/: bonds.rs  common.rs  mod.rs  utils.rs
bot/src/utils/: rpc.rs
cli/: Cargo.toml
cli/src/commands/: bonds.rs  common.rs
collect/: Cargo.toml
collect/src/: dto.rs  lib.rs
collect/src/commands/: bonds.rs
common-rs/: Cargo.toml
common-rs/src/: bonds.rs  config.rs  constants.rs  funded_bonds.rs  lib.rs  settlement_claims.rs  settlements.rs  stake_accounts.rs  utils.rs  witdraw_requests.rs
fixtures/accounts/: 76sb4FZPwewvxtST5tJMp9N43jj4hDC5DQ7bv8kBi1rA.json  8PMeDKfxUKv4KJBBQJYPmfyZfoYYnMju6fnokRR9uT2w.json
fixtures/accounts/settlement-pipelines/: 2dCciM6aFdDXeiirHNTmkxh9Sda1DwfPfF1HVNZSrPcE.json  4tuMshQNpAFpy1YtEHnSsE5EPN1mAT8FevWvn2UPJHNM.json  5wYHvcKbCHPsT9dhEZaVZzoVY1qA7bosKRzKczpcaXpq.json  6hkfqeNAbURk7CmAQsP4Qm6WwHVF4LxHupEvQf7Tkrf1.json  A7uqmajxP3NdzbYDXiGQRGTL8d3dZ5pjS4kR9NTZcxtg.json  ASfKFAKz6fH4eip1jdLGt5Ym954kU9KYnwq2Csn9ogSz.json  EBVj3uwSKZpqEb1K267JaPxDQhULVqCy6hYeQqjsPh81.json  HWeDLvzf8PhbYCuNFXB9E3fiCaz8RCtHW8b52iPAboCJ.json  HiLaiF6HAUL2kYBsHcVb3CDws9c3dEphtfPbzDnKYFYB.json  vote-account-pattern.json
fuzz/: Cargo.toml
insurance-engine/: Cargo.toml
insurance-engine/src/: insurance_claims.rs  insured_events.rs  lib.rs  merkle_tree_collection.rs  utils.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: lib.rs  psr_claim.rs  serde_serialize.rs
migrations/: 0001-add-funds.sql  add-funding.sql  init.sql
programs/validator-bonds/: Cargo.toml  README.md  build.rs
programs/validator-bonds/src/: checks.rs  constants.rs  error.rs  lib.rs
programs/validator-bonds/src/events/: bond.rs  config.rs  mod.rs  settlement.rs  settlement_claim.rs  stake.rs  withdraw.rs
programs/validator-bonds/src/instructions/: init_config.rs  mod.rs
programs/validator-bonds/src/instructions/bond/: configure_bond.rs  configure_bond_with_mint.rs  fund_bond.rs  init_bond.rs  mint_bond.rs  mod.rs
programs/validator-bonds/src/instructions/config/: configure_config.rs  emergency_pause.rs  init_config.rs  migrate_bond_cpmpe.rs  mod.rs
programs/validator-bonds/src/instructions/settlement/: cancel_settlement.rs  claim_settlement.rs  close_settlement.rs  close_settlement_claim.rs  fund_settlement.rs  init_settlement.rs  mod.rs
programs/validator-bonds/src/instructions/stake/: merge.rs  merge_stake.rs  mod.rs  reset.rs  reset_stake.rs  withdraw_stake.rs
programs/validator-bonds/src/instructions/withdraw/: cancel_withdraw_request.rs  claim_withdraw_request.rs  init_withdraw_request.rs  mod.rs
programs/validator-bonds/src/state/: bond.rs  config.rs  mod.rs  settlement.rs  settlement_claim.rs  settlement_claims.rs  withdraw_request.rs
programs/validator-bonds/src/utils/: basis_points.rs  bitmap.rs  merkle_proof.rs  mod.rs  stake.rs
resources/diagram/: accounts.excalidraw
resources/idl/: validator_bonds.json
scripts/: collect-bonds.bash  fetch-genesis.bash  fetch-jito-snapshot.bash  generate-discord-public-report.bash  launch-api.bash  list-last-jito-snapshots.bash  list-last-solana-snapshots.bash  settlement-json-listing.sh  store-bonds.bash  update-cli-version.sh
settlement-engine/: Cargo.toml  README.md
settlement-engine/src/: lib.rs  merkle_tree_collection.rs  protected_events.rs  settlement_claims.rs  settlement_config.rs  stake_meta_index.rs  utils.rs
settlement-pipelines/: Cargo.toml  README.md  package.json
settlement-pipelines/__tests__/data/: 601_settlements.json
settlement-pipelines/__tests__/test-validator/: pipelineSettlement.spec.ts
settlement-pipelines/src/: anchor.rs  arguments.rs  cli_result.rs  executor.rs  init.rs  json_data.rs  lib.rs  reporting.rs  settlements.rs  stake_accounts.rs  stake_accounts_cache.rs
snapshot-parser/: Cargo.toml
snapshot-parser/src/: bank_loader.rs  lib.rs  stake_meta.rs  utils.rs  validator_meta.rs
store/: Cargo.toml
store/src/commands/: bonds.rs
utilities/: update-cli-version.sh
validator-bonds-cli/: Cargo.toml
validator-bonds-cli/src/: dto.rs
validator-bonds-cli/src/commands/: bonds.rs
validator-bonds-cli/src/utils/: mod.rs  stake_accounts.rs
