[workspace]
members = [
    "programs/*",
    "insurance-engine",
    "snapshot-parser",
    "merkle-tree",
    "store",
    "collect",
    "api",
]
resolver = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0", default-features = false, features = ["stake"]}
solana-security-txt = "1.1.1"
default-env = "0.1.1"
anyhow = "1.0.40"
bincode = "1.3.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
fast-math = "0.1.1"
hex = "0.4.3"
log = "0.4.14"
merkle-tree = { path = "./merkle-tree" }
serde = "1.0.190"
serde_json = "1.0.108"
snapshot-parser = { path = "./snapshot-parser" }
solana-client = "=1.16.18"
solana-ledger = "=1.16.18"
solana-program = "=1.16.18"
solana-runtime = "=1.16.18"
solana-sdk = "=1.16.18"
tokio = { version = "1", features = ["full"] }

