[workspace]
members = [
    "api",
    "insurance-engine",
    "merkle-tree",
    "programs/*",
    "snapshot-parser",
    "validator-bonds-cli",
]
resolver = "1"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = ["stake"] }
anyhow = "1.0.40"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.1.11", features = ["derive", "env"] }
default-env = "0.1.1"
env_logger = "0.10.0"
fast-math = "0.1.1"
hex = "0.4.3"
log = "0.4.14"
merkle-tree = { path = "./merkle-tree" }
rust_decimal = { version = "1.26", features = ["db-postgres"] }
serde = "1.0.190"
serde_json = "1.0.108"
serde_yaml = "0.8"
snapshot-parser = { path = "./snapshot-parser" }
solana-account-decoder = "1.17.22"
solana-cli-config = "1.17.22"
solana-clap-utils = "1.17.22"
solana-client = "=1.17.22"
solana-ledger = "=1.17.22"
solana-logger = "1.17.22"
solana-program = "=1.17.22"
solana-runtime = "=1.17.22"
solana-sdk = "=1.17.22"
solana-accounts-db = "=1.17.22"
solana-security-txt = "1.1.1"
structopt = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3" }
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
validator-bonds = { path = "./programs/validator-bonds" }
warp = "0.3"
