[workspace]
members = [
    "programs/*",
    "insurance-engine",
    "snapshot-parser",
    "merkle-tree",
    "validator-bonds-cli",
    "api",
]
resolver = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0", default-features = false, features = ["stake"]}
solana-security-txt = "1.1.1"
default-env = "0.1.1"
anyhow = "1.0.40"
bincode = "1.3.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
fast-math = "0.1.1"
chrono = "0.4"
hex = "0.4.3"
log = "0.4.14"
merkle-tree = { path = "./merkle-tree" }
validator-bonds = { path = "./programs/validator-bonds" }
serde = "1.0.190"
serde_json = "1.0.108"
snapshot-parser = { path = "./snapshot-parser" }
solana-client = "=1.16.18"
solana-ledger = "=1.16.18"
solana-program = "=1.16.18"
solana-runtime = "=1.16.18"
solana-account-decoder = "1.16.18"
solana-sdk = "=1.16.18"
solana-clap-utils = "1.16.18"
solana-cli-config = "1.16.18"
solana-logger = "1.16.18"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
warp = "0.3"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.26", features = ["db-postgres"] }
serde_yaml = "0.8"
structopt = "0.3.21"
tracing-subscriber = { version = "0.3" }
tracing = "0.1.37"
tracing-log = "0.1.3"
