[package]
name = "api"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
uuid = "1.4.1"
anyhow = "1.0.40"
solana-clap-utils = "1.14.19"
solana-client = "1.14.19"
solana-logger = "1.14.19"
solana-sdk = "1.14.19"
solana-cli-config = "1.14.19"
solana-account-decoder = "1.14.19"
solana-program = "1.14.19"
solana-address-lookup-table-program = "1.14.19"
solana-transaction-status = "1.14.19"
spl-memo = "4.0.0"
log = "0.4.14"
structopt = "0.3.21"
shellexpand = "2.1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = "^1.0"
bs58 = "0.3.1"
chrono = "0.4"
async-stream = "0.3"
serde_json = "1.0"
bincode = "1.3.3"
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
futures = "0.3.28"
base64 = "0.13.0"
cached = "0.44.0"
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors", "validate-request", "auth", "trace", "request-id"] }
tower = { version = "0.4.0", features = ["buffer", "limit"] }
tower_governor = "0.0.4"
tracing-subscriber = { version = "0.3" }
tracing = "0.1.37"
tracing-log = "0.1.3"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.26", features = ["db-postgres"] }
env_logger = "0.10.0"
amqprs = { version = "1.5.1", features = ["urispec", "tls"]}
uriparse = "0.6.4"
validator-bonds = { version = "0.1.0", path="../programs/validator-bonds", features=["cpi"] }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
serde_yaml = "0.8"
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
warp = "0.3"