[package]
name = "api"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "validator-bonds-api-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
merkle-tree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snapshot-parser = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
warp = { workspace = true }
tokio-postgres = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
structopt = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }