[package]
name = "settlement-pipelines"
version = "0.0.1"
description = "Off-chain pipelines to Validator Bonds Program"
edition = "2021"
authors = ["Marinade.Finance"]

[[bin]]
name = "init-settlement"
path = "src/bin/init_settlement.rs"

[dependencies]
anchor-client = {workspace = true}
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
solana-transaction-executor = { workspace = true }
solana-transaction-builder = { workspace = true }
solana-transaction-builder-executor = { workspace = true }
merkle-tree = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
settlement-engine = { workspace = true }
shellexpand = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
validator-bonds = { workspace = true }
validator-bonds-common = { workspace = true }
