[package]
name = "validator-bonds"
version = "0.1.0"
description = "Marinade validator bonds program protecting validator behavior"
edition = "2021"
license = "Apache-2.0"
authors = ["Marinade.Finance"]

[lib]
crate-type = ["cdylib", "lib"]
name = "validator_bonds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
bincode = {workspace = true}

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }

